[tool.poetry]
name = "sorting-hat-step"
version = "25.0.1a30"
description = "Sorting hat step"
authors = []
readme = "README.md"
packages = [{include = "sorting_hat_step"}]

[tool.poetry.scripts]
step = { callable = "scripts.run_step:step" }

[tool.poetry.dependencies]
apf_base = { path = "../libs/apf", develop = true }
boto3 = "1.26.69"
confluent_kafka = "2.0.2"
numpy = "^1.24.3"
python = ">=3.10,<3.11"
scipy = "1.10.1"
survey-parser-plugins = {path = "../libs/survey_parser_plugins", develop = true}
pymongo = "^4.4.1"
db-plugins = {path = "../libs/db-plugins", develop = true}
psycopg2-binary = "^2.9.9"



[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
requests = "^2.31.0"
pytest-docker = "^1.0.1"
pytest-cov = "^4.1.0"
moto = {extras = ["secretsmanager"], version = "^4.1.11"}
db-plugins = {path = "../libs/db-plugins", develop = true}
psycopg2-binary = "*"
test-utils = { path = "../libs/test_utils", develop = true }

[tool.black]
line-length = 79

[tool.pytest.ini_options]
addopts = "-x"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
