[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "stamp_classifier_step"
version = "6.1.1a41"
description = "Stamp Classifier Step"
authors = []
readme = "README.md"
packages = [{include = "stamp_classifier_step"}]

[[tool.poetry.source]]
name = "git"
url = "https://github.com/alercebroker/atlas_stamp_classifier"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
apf-base = { version = "<2.0" }
atlas-stamp-classifier = {git = "ssh://git@github.com/alercebroker/atlas_stamp_classifier.git", rev = "main", optional = true }
astropy = { version = "*", optional = true }
pandas = { version = "*", optional = true }
protobuf = { version = "*", optional = true }
grpcio = { version = "*", optional = true }
pygments = { version = "*", optional = true }
jinja2 = { version = "*", optional = true }
markupsafe = {version = "*", optional = true }
pytz = {version = "*", optional = true }
python-dateutil = {version = "*", optional = true }
tensorflow = {version = "*", optional = true }

ephem = {version = "*", optional = true }
absl-py = {version = "*", optional = true }
astor = {version = "*", optional = true }
bleach = {version = "*", optional = true }
certifi = {version = "*", optional = true }
chardet = {version = "*", optional = true }
docutils = {version = "*", optional = true }
flask = {version = "*", optional = true }
gast = {version = "*", optional = true }
google-pasta = {version = "*", optional = true }
h5py = {version = "*", optional = true }
idna = {version = "*", optional = true }
itsdangerous = {version = "*", optional = true }
joblib = {version = "*", optional = true }
keras-applications = {version = "*", optional = true }
keras-preprocessing = {version = "*", optional = true }
markdown = {version = "*", optional = true }
pkginfo = {version = "*", optional = true }
readme-renderer = {version = "*", optional = true }
requests = {version = "*", optional = true}
requests-toolbelt = {version = "*", optional = true }
numpy = {version = "*", optional = true }
scikit-learn = {version = "*", optional = true }
scipy = {version = "*", optional = true }
six = {version = "*", optional = true }
termcolor = {version = "*", optional = true }
tqdm = {version = "*", optional = true }
twine = {version = "*", optional = true }
urllib3 = {version = "*", optional = true }
webencodings = {version = "*", optional = true }
werkzeug = {version = "*", optional = true }
wrapt = {version = "*", optional = true }
matplotlib = {version = "*", optional = true }
click = {version = "*", optional = true }
wget = {version = "*", optional = true }

[tool.poetry.group.dev.dependencies]
black = "~=21.0"
 
[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-cov = "*"
pytest-docker = "*"

[tool.poetry.group.atlas]
optional = true

[tool.poetry.group.atlas.dependencies]
python = ">=3.8,<3.9"
keras-preprocessing = {version = "*", optional = true, python = "~=3.8.0"} # Added to avoid conflict with tensorflow
atlas-stamp-classifier = {git = "ssh://git@github.com/alercebroker/atlas_stamp_classifier.git", rev = "main", optional = true,  python = ">=3.8,<3.9"}
astropy = { version = ">=5.2.0,<5.3.0", optional = true,  python = ">=3.8,<3.9" }
pandas = { version = "*", optional = true,  python = ">=3.8,<3.9" }
protobuf = {version = "3.15.3", optional = true, python = "~=3.8.0"}
grpcio = { version = "1.32", optional = true,  python = ">=3.8,<3.9" }
pygments = { version = "2.12", optional = true,  python = ">=3.8,<3.9" }
jinja2 = { version = "3.0.0", optional = true,  python = ">=3.8,<3.9" }
scipy = {version = "*", optional = true, python = "~=3.8.0"}

[tool.poetry.group.ztf]
optional = true

[tool.poetry.group.ztf.dependencies]
python = ">=3.7,<3.8"
pandas = {version = "0.24.2", optional = true, python = "~=3.7.0"}
jinja2 = {version = "2.10.1", optional = true, python = "~=3.7.0"}
markupsafe = {version = "1.1.1", optional = true, python = "~=3.7.0"}
grpcio = {version = "1.21.1", optional = true, python = "~=3.7.0"}
protobuf = {version = "3.8.0", optional = true, python = "~=3.7.0"}
pygments = {version = "2.4.2", optional = true, python = "~=3.7.0"}
ephem = {version = "3.7.7.0", optional = true, python = "~=3.7.0"}
absl-py = {version = "0.7.1", optional = true, python = "~=3.7.0"}
astor = {version = "0.8.0", optional = true, python = "~=3.7.0"}
astropy = {version = "3.2.1", optional = true, python = "~=3.7.0"}
bleach = {version = "3.1.0", optional = true, python = "~=3.7.0"}
certifi = {version = "2019.6.16", optional = true, python = "~=3.7.0"}
chardet = {version = "3.0.4", optional = true, python = "~=3.7.0"}
docutils = {version = "0.14", optional = true, python = "~=3.7.0"}
flask = {version = "1.0.3", optional = true, python = "~=3.7.0"}
gast = {version = "0.2.2", optional = true, python = "~=3.7.0"}
google-pasta = {version = "0.1.7", optional = true, python = "~=3.7.0"}
h5py = {version = "2.9.0", optional = true, python = "~=3.7.0"}
idna = {version = "2.8", optional = true, python = "~=3.7.0"}
itsdangerous = {version = "1.1.0", optional = true, python = "~=3.7.0"}
joblib = {version = "0.13.2", optional = true, python = "~=3.7.0"}
keras-applications = {version = "1.0.8", optional = true, python = "~=3.7.0"}
keras-preprocessing = {version = "1.1.0", optional = true, python = "~=3.7.0"}
markdown = {version = "3.1.1", optional = true, python = "~=3.7.0"}
pkginfo = {version = "1.5.0.1", optional = true, python = "~=3.7.0"}
python-dateutil = {version = "2.8.0", optional = true, python = "~=3.7.0"}
pytz = {version = "2019.1", optional = true, python = "~=3.7.0"}
readme-renderer = {version = "24.0", optional = true, python = "~=3.7.0"}
requests = {version = "2.22.0", optional = true, python = "~=3.7.0"}
requests-toolbelt = {version = "0.9.1", optional = true, python = "~=3.7.0"}
numpy = {version = ">=1.16,<2.0", optional = true, python = "~=3.7.0"}
# scikit-learn = {version = ">=0.21.2,<0.22.0", optional = true, python = "~=3.7.0"}
scikit-learn = {version = ">=1.0,<2.0", optional = true, python = "~=3.7.0"}
scipy = {version = "1.3.0", optional = true, python = "~=3.7.0"}
six = {version = "1.12.0", optional = true, python = "~=3.7.0"}
tensorflow = {version = ">=1.14,<2.0", optional = true, python = "~=3.7.0"}
termcolor = {version = "1.1.0", optional = true, python = "~=3.7.0"}
tqdm = {version = "4.32.1", optional = true, python = "~=3.7.0"}
twine = {version = "1.13.0", optional = true, python = "~=3.7.0"}
urllib3 = {version = "1.25.3", optional = true, python = "~=3.7.0"}
webencodings = {version = "0.5.1", optional = true, python = "~=3.7.0"}
werkzeug = {version = "0.15.4", optional = true, python = "~=3.7.0"}
wrapt = {version = "1.11.2", optional = true, python = "~=3.7.0"}
matplotlib = {version = "3.1.0", optional = true, python = "~=3.7.0"}
click = {version = ">=7.0,<8.0", optional = true, python = "~=3.7.0"}

[tool.poetry.extras]
atlas = ["atlas-stamp-classifier", "astropy", "pandas", "protobuf", "grpcio", "pygments", "jinja2", "markupsafe", "pytz", "python-dateutil"]
ztf = ["pandas", "jinja2", "markupsafe", "grpcio", "protobuf", "pygments", "ephem", "absl-py", "astor", "astropy", "bleach", "certifi", "chardet", "docutils", "flask", "gast", "google-pasta", "h5py", "idna", "itsdangerous", "joblib", "keras-applications", "keras-preprocessing", "markdown", "pkginfo", "python-dateutil", "pytz", "readme-renderer", "requests", "requests-toolbelt", "numpy", "scikit-learn", "scipy", "six", "tensorflow", "termcolor", "tqdm", "twine", "urllib3", "webencodings", "werkzeug", "wrapt", "matplotlib", "click"]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
addopts = "-x -s"
