[tool.poetry]
name = "turbofats"
version = "6.1.1a44"
description = "Library with some features for astronomical time series"
authors = ["ALeRCE Team"]
license = "MIT licence"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
numpy = ">=1.16.5"
scipy = ">=1.10.1,<1.11.0"
matplotlib = "3.7.1"
gpy = {git = "https://github.com/SheffieldML/GPy.git", rev = "v1.10.0"}
numba = ">=0.56.4,<0.57.0"
statsmodels = "*"
P4J = { path = "../P4J", develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
