[tool.poetry]
name = "watchlist-step"
version = "6.2.1a94"
description = "Watchlist Step"
authors = []
readme = "README.md"
packages = [{include = "watchlist_step"}]

[tool.poetry.scripts]
step = { callable = "scripts.run_step:step" }

[tool.poetry.dependencies]
python = "~3.8"
apf-base = "1.0.9"
psycopg2-binary = "2.8.6"
db-plugins = { git = "https://github.com/alercebroker/db-plugins.git", tag = "2.0.2" }

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-docker = "^1.0.1"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
