[tool.poetry]
name = "watchlist-step"
version = "24.4.2a31"
description = "Watchlist Step"
authors = []
readme = "README.md"
packages = [{ include = "watchlist_step" }]

[tool.poetry.scripts]
step = "scripts.run_step:step"

[tool.poetry.dependencies]
python = "~3.11"
apf-base = "^1.0.9"
pydantic = "^2.6.4"
psycopg = "^3.1.18"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-docker = "^1.0.1"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
ruff = "^0.3.5"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
