[tool.poetry]
name = "watchlist-step"
version = "25.0.1a30"
description = "Watchlist Step"
authors = []
readme = "README.md"
packages = [{ include = "watchlist_step" }]

[tool.poetry.scripts]
step = "scripts.run_step:step"
sample = "scripts.make_sample:run"

[tool.poetry.dependencies]
python = "~3.10"
apf-base = { path = "../libs/apf", develop = true }
pydantic = "^2.6.4"
psycopg2-binary = "=2.9.9"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-docker = "^1.0.1"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
ruff = "^0.3.5"

[tool.ruff]
line-length = 80

[tool.pyright]
typeCheckingMode = "basic"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
