[tool.poetry]
name = "xmatch-step"
version = "6.2.1a89"
description = "xmatch step"
authors = []
readme = "README.md"
packages = [{include = "xmatch_step"}]

[tool.poetry.scripts]
step = { callable = "scripts.run_step:step" }

[tool.poetry.dependencies]
python = ">=3.7.1,<3.8"
astropy = "4.0.0"
requests = "2.23.0"
pandas = "1.3.5"
apf_base = { path = "../libs/apf", develop = true }

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-docker = "^1.0.1"
numpy = "^1.21.6"
cython = "^0.29.36"
psycopg2-binary = "^2.9.6"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
