[tool.poetry]
name = "xmatch-step"
version = "25.0.1a30"
description = "xmatch step"
authors = []
readme = "README.md"
packages = [{include = "xmatch_step"}]

[tool.poetry.scripts]
step = { callable = "scripts.run_step:step" }

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
astropy = "^6.0.0"
requests = "^2.23.0"
apf_base = { path = "../libs/apf", develop = true }

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-docker = "^1.0.1"
pytest-cov = "^4.1.0"
test-utils = { path = "../libs/test_utils", develop = true }

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
